--- a/paginas/style/style.css
+++ b/paginas/style/style.css
@@ -15,7 +15,7 @@ body{
     display: block;
     height: 500px;
     color: rgb(255, 255, 255);
-    background: white url('/imagems/acmella-120_0c18e0b0-4cc8-4f8e-944b-e70685eb1d1c_1024x1024.webp') no-repeat center center fixed;
+    background: white url('/imagems/acmella-120_0c18e0b0-4cc8-4f8e-944b-e70685eb1d1c_1024x1024.jpg') no-repeat center center fixed;
     background-size: cover;
     position: relative;
     font-family: 'Inter';
