--- a/paginas/style/style.css
+++ b/paginas/style/style.css
@@ -11,29 +11,32 @@ html{
 body{
     background-color: rgba(211, 211, 211, 0.122);
 }
-#foto-principal-main{
+.foto-principal-main{
     display: block;
     height: 500px;
     color: rgb(255, 255, 255);
     background: white url('acmella-120_0c18e0b0-4cc8-4f8e-944b-e70685eb1d1c_1024x1024.jpg') no-repeat center center fixed;
     background-size: cover;
-    position: relative;
     font-family: 'Inter';
     text-align: center;
+    margin-top: 60px;
 }
-#h1-foto-principal{
-    background-color: rgba(0, 0, 0, 0.252);
-    width: 400px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+header{
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    box-shadow: 1px 1px 10px black;
+}
+header a {
+    font-family: 'Inter';
+    color: #ffda05;
 }
 .nav{
     height: 60px;
     padding: 10px;
     text-align: center;
-    background-color: rgba(255, 255, 255, 0.885);
+    background-color: rgb(255, 255, 255);
 }
 main h1{
     text-align: center;
@@ -53,6 +56,16 @@ main{
     padding-top: 30px;
     box-shadow: 1px 1px 10px black;
 }
+.foto-principal-main-amazonia{
+    display: block;
+    height: 500px;
+    color: rgb(255, 255, 255);
+    background: white url('https://images.pexels.com/photos/2739666/pexels-photo-2739666.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1') no-repeat center center fixed;
+    background-size: cover;
+    font-family: 'Inter';
+    text-align: center;
+    margin-top: 65px;
+}
 #amazonia{
     height: 500px;
     background: white url('https://images.pexels.com/photos/2739666/pexels-photo-2739666.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1') no-repeat center center fixed;
@@ -67,6 +80,7 @@ main{
 }
 .card{
     margin-right: 10px;
+    position: static;
 }
 #produtos{
     display: block;
