--- a/paginas/style/style.css
+++ b/paginas/style/style.css
@@ -7,6 +7,7 @@
 }
 html{
     scroll-behavior: smooth;
+    overflow-y: scroll;
 }
 body{
     background-color: rgba(211, 211, 211, 0.122);
@@ -25,23 +26,23 @@ header{
     position: fixed;
     left: 0;
     top: 0;
-    width: 100%;
+    width: 100vw;
     box-shadow: 1px 1px 10px black;
 }
-header a {
+.nav > a:hover{
     font-family: 'Inter';
     color: #ffda05;
 }
 .nav{
-    height: 60px;
     padding: 10px;
     text-align: center;
     background-color: rgb(255, 255, 255);
 }
-main h1{
+main > h1{
     text-align: center;
     font-family: 'Inter';
     color: #ffda05;
+
 
 }
 hr{
@@ -97,8 +98,8 @@ h2{
     text-align: center;
     color: #ad9302;
 }
-.nav-link{
-    color: #d3b406;
+.nav > a{
+    color: #958004;
 }
 .btn{
     background: #ad9302;;
@@ -152,6 +153,17 @@ footer {
     .card{
         margin-bottom: 10px;
     }
-    
+    .nav{
+        height: 100px;
+        background-color: rgb(255, 255, 255);
+        display: flex;
+        flex-direction: column;
+        align-items: stretch;
+    }
+    .nav > a:hover{
+        transform: scale(1.2);
+        color: #ffd900;
+        translate: 1rem;
+    }
 }
     
