--- a/paginas/style/style.css
+++ b/paginas/style/style.css
@@ -28,7 +28,7 @@ header{
     top: 0;
     width: 100vw;
     box-shadow: 1px 1px 10px black;
-    font-family: 'arial';
+    font-family: 'Poppins';
 }
 .nav > a:hover{
     font-family: 'Inter';
@@ -37,12 +37,12 @@ header{
 .nav{
     padding: 10px;
     text-align: center;
-    background-color: rgb(255, 255, 255);
+    background-color: white;
 }
 main > h1{
     text-align: center;
     font-family: 'Inter';
-    color: #ffda05;
+    color: #FFD700;
 
 
 }
@@ -88,6 +88,18 @@ main{
     display: block;
     margin: auto;
     margin-bottom: 30px;
+    background-color: #FF8C00;
+    border-color: #000000;
+}
+#produtos:hover{
+    transform: scale(1.2);
+    transition: 1s;
+}
+.btn{
+    background-color:#FF8C00;
+    border-color: black;
+    color: rgb(255, 255, 255);
+    font-family: Arial, Helvetica, sans-serif;
 }
 main > p{
     text-align: justify;
@@ -97,14 +109,10 @@ main > p{
 }
 h2{
     text-align: center;
-    color: #ad9302;
+    color:#e1e109;
 }
 .nav > a{
-    color: #958004;
-}
-.btn{
-    background: #ad9302;;
-    border: #ffd900;;
+    color: #FF8C00;
 }
 main img{
     display: block;
@@ -112,8 +120,9 @@ main img{
 }
 footer {
     width: 100%;
-    background-color: #C1FF72;
-    font: normal 11pt arial;
+    background-color: #FF8C00;
+    color: #ffffff;
+    font: normal 11pt 'Inter';
     padding: 0;
     margin: 0;
 }
