--- a/style/style.css
+++ b/style/style.css
@@ -42,15 +42,13 @@ main > h1{
     text-align: center;
     font-family: 'Inter';
     color: #FFD700;
-
-
 }
 hr{
     width: 400px;
     background-color: black;
 }
 main{
-    max-width: 1000px;
+    max-width: 1200px;
     min-width: 300;
     margin: auto;
     background-color: white;
@@ -78,10 +76,14 @@ main{
     display: flex;
     flex-direction: row;
     justify-content: center;
+    margin-bottom: 20px;
 }
 .card{
     margin-right: 10px;
     position: static;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.376);
+    border-radius: 10px;
+    margin-bottom: 15px;
 }
 #produtos{
     display: block;
@@ -89,16 +91,27 @@ main{
     margin-bottom: 30px;
     background-color: #FF8C00;
     border-color: #000000;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.444);
+    
 }
 #produtos:hover{
     transform: scale(1.2);
     transition: 1s;
 }
 .btn{
-    background-color:#FF8C00;
-    border-color: black;
+    background-color:#e98203;
     color: rgb(255, 255, 255);
     font-family: Arial, Helvetica, sans-serif;
+    border: 2px solid rgb(183, 132, 15) ;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.419);
+}
+.card .btn:hover{
+    transform: scale(1.2);
+    background-color: #15c426;
+    border: #303136;
+    color: rgb(255, 255, 255);
+    transition: 0.5s;
+    
 }
 main > p{
     text-align: justify;
@@ -151,6 +164,14 @@ footer {
     width: 600px;
     margin: auto;
 }
+.img-fluid{
+    width: 80%;
+    display: block;
+    margin: auto;
+}
+#logo1{
+    background-color: white;
+}
 @media screen  and (max-width: 768px){
     main{
         max-width: 1000px;
@@ -195,6 +216,9 @@ footer {
     }
     hr{
         width: 40%;
+    }
+    .img-fluid{
+        margin-top: 100px;
     }
     
 }
