--- a/style/style.css
+++ b/style/style.css
@@ -189,6 +189,11 @@ footer {
     flex-direction: column;
     justify-content: space-between;
     margin: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+#info P {
+    margin: 20px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 #info{
     margin: 20px;
