--- a/style/style.css
+++ b/style/style.css
@@ -13,14 +13,17 @@ body{
     background-color: rgba(211, 211, 211, 0.122);
 }
 .foto-principal-main{
-    display: block;
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    font-size: 2.5em;
     height: 500px;
     color: rgb(255, 255, 255);
-    background: white url('acmella-120_0c18e0b0-4cc8-4f8e-944b-e70685eb1d1c_1024x1024.jpg') no-repeat center center fixed;
+    background: white url('/imagems/ACMELLA\ OREACEA.jpg') no-repeat center center fixed;
     background-size: cover;
     font-family: 'Inter';
     text-align: center;
-    box-shadow: 2px 2px 10px black;
 }
 header{
     position: fixed;
@@ -121,6 +124,22 @@ main{
     transition: 0.5s;
     
 }
+#amazonia2{
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    justify-content: center;
+    font-size: 2.5em;
+    height: 500px;
+    color: rgb(255, 255, 255);
+    background: white url('/imagems/RIO\ AMAZONAS.jpg') no-repeat center center fixed;
+    background-size: cover;
+    font-family: 'Inter';
+    text-align: center;
+    margin-top: 65px;
+    margin-bottom: 20px;
+}
+
 main > p{
     text-align: justify;
     text-indent: 50px;
@@ -188,15 +207,16 @@ footer {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin: 20px;
     font-family: Arial, Helvetica, sans-serif;
+    font-weight: 600;
 }
 #info P {
-    margin: 20px;
     font-family: Arial, Helvetica, sans-serif;
+    font-weight: 600;
 }
 #info{
     margin: 20px;
+
 }
 @media screen  and (max-width: 768px){
     main{
@@ -264,7 +284,6 @@ footer {
     }
     #info p{
         font-family: Arial, Helvetica, sans-serif;
-        margin: 20px;
     }
     
 }
