--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body{
     font-size: 2.5em;
     height: 500px;
     color: rgb(255, 255, 255);
-    background: white url('imagems/ACMELLAOREACEA.jpg') no-repeat center center fixed;
+    background: white url('imagems/ACMELLAOREACEA.jpg') no-repeat center center;
     background-size: cover;
     font-family: 'Inter';
     text-align: center;
