--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body{
     font-size: 2.5em;
     height: 500px;
     color: rgb(255, 255, 255);
-    background: white url('imagems/ACMELLAOREACEA.jpg') no-repeat center center;
+    background: white url('imagems/ACMELLAOREACEA.jpg') no-repeat center center fixed;
     background-size: cover;
     font-family: 'Inter';
     text-align: center;
@@ -284,6 +284,18 @@ footer {
     }
     #info p{
         font-family: Arial, Helvetica, sans-serif;
+    }
+    .foto-principal-main{
+        background: white url('imagems/ACMELLAOREACEA.jpg') no-repeat center center;
+        background-size: cover;
+    }
+    .foto-principal-main-amazonia{
+        background: white url('https://images.pexels.com/photos/2739666/pexels-photo-2739666.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1') no-repeat center center;
+        background-size: cover;
+    }
+    #amazonia2{
+        background: white url('imagems/RIOAMAZONAS.jpg') no-repeat center center;
+        background-size: cover;
     }
     
 }
