--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ body{
     font-size: 2.5em;
     height: 500px;
     color: rgb(255, 255, 255);
-    background: white url('imagems/ACMELLAOREACEA.jpg') no-repeat center center fixed;
+    background: white url('../imagems/ACMELLAOREACEA.jpg') no-repeat center center fixed;
     background-size: cover;
     font-family: 'Inter';
     text-align: center;
@@ -102,7 +102,6 @@ main{
     background-color: #FF8C00;
     border: 0px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.444);
-    
 }
 #produtos:hover{
     transform: scale(1.05);
@@ -132,7 +131,7 @@ main{
     font-size: 2.5em;
     height: 500px;
     color: rgb(255, 255, 255);
-    background: white url('imagems/RIOAMAZONAS.jpg') no-repeat center center fixed;
+    background: white url('../imagems/RIOAMAZONAS.jpg') no-repeat center center fixed;
     background-size: cover;
     font-family: 'Inter';
     text-align: center;
@@ -286,7 +285,7 @@ footer {
         font-family: Arial, Helvetica, sans-serif;
     }
     .foto-principal-main{
-        background: white url('imagems/ACMELLAOREACEA.jpg') no-repeat center center;
+        background: white url('../imagems/ACMELLAOREACEA.jpg') no-repeat center center;
         background-size: cover;
     }
     .foto-principal-main-amazonia{
@@ -294,7 +293,7 @@ footer {
         background-size: cover;
     }
     #amazonia2{
-        background: white url('imagems/RIOAMAZONAS.jpg') no-repeat center center;
+        background: white url('../imagems/RIOAMAZONAS.jpg') no-repeat center center;
         background-size: cover;
     }
     
